@@ -1,3 +1,8 @@
+2007-04-26  Stefan Jahn  <stefan@lkcc.org>
+
+	* mouseactions.cpp (MPressElement): Fixed sticky rotation for
+	elements with an initial rotation (e.g. AC voltage source).
+
 2007-04-15  Stefan Jahn  <stefan@lkcc.org>
 
 	* dialogs/packagedialog.cpp (slotCreate): Adding ".qucs" extension
